# moneta-agents

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  azure.yaml
.devcontainer/: devcontainer.json  post-create.sh
backend/: .dockerignore  .env.sample  DB Setup.ipynb  Dockerfile  Testing.ipynb  crm_store.py  data_indexing.py  data_upload.py  deploy_backend_acr.sh  function_app.py  requirements.txt
backend/banking/: conversation_store.py  cosmosdb_cli_addrole.sh  deploy_backend_acr.sh
backend/genai_vanilla_agents/: agent.py  askable.py  coding_agent.py  conversation.py  llm.py  planned_team.py  sequence.py  team.py  user.py  workflow.py
backend/insurance/: .dockerignore  .gitignore  (+3 more)
frontend/: .dockerignore  .env.sample  Dockerfile  config.py  deploy_frontend_acr.sh  requirements.txt  rm_app.py
infra/: abbreviations.json  main.bicep  main.json  main.parameters.json
notebooks/framework-tests/insurance-semantic-kernel/: .gitignore  README.md  agentic_system.py  crm_store.py  env.sample  insurance_test_sk.ipynb  product_store.py  pyproject.toml
scripts/: load_python_env.ps1  load_python_env.sh  oauth2PermissionScopes.json  postdeploy.ps1  postdeploy.sh  postprovision.ps1  postprovision.sh  preAuthorizedApplications.json  predown.ps1  predown.sh  preprovision.ps1  preprovision.sh  requiredResourceAccess.json  requirements.txt
src/backend/: .dockerignore  .gitignore  Dockerfile  Testing-gbb.ipynb  Testing-sk.ipynb  app.py  conversation_store.py  crm_store.py  foundry_agent_utils.py  pyproject.toml  readme.md  requirements.txt  sample.env  start-local-dahboard.sh  util.py
src/backend/gbb/: handler.py
src/backend/gbb/agents/fsi_banking/: cio_agent.py  crm_agent.py  group_chat.py  news_agent.py  product_agent.py  user_proxy_agent.py
src/backend/gbb/agents/fsi_insurance/: config.py  crm_agent.py  group_chat.py  product_agent.py
src/backend/gbb/genai_vanilla_agents/: _pydantic.py  agent.py  azure_coding_agent.py  conversation.py  function_utils.py  llm.py  planned_team.py  sequence.py  team.md  workflow.py
src/backend/gbb/genai_vanilla_agents/remote/: remote.proto  remote.py  run_host.py
src/backend/sk/: handler.py
src/backend/sk/agents/banking/: cio.yaml  crm.yaml  funds.yaml  news.yaml  responder.yaml
src/backend/sk/agents/insurance/: query.yaml  responder.yaml
src/backend/sk/orchestrators/: banking.py  custom_span_processor.py  insurance.py  semantic_orchestrator.py  temp_agent.py
src/backend/sk/skills/: cio_facade.py  crm_facade.py  funds_facade.py  news_facade.py  policies_facade.py
src/backend/testing/: test_with_curl.sh
src/frontend/: .dockerignore  Dockerfile  app.py  config.py  pyproject.toml  readme.md  requirements.txt  sample.env
(+56 files in other folders)
